[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sounds/BGM/Candadito_Nvl2.ogg" type="AudioStream" id=1]
[ext_resource path="res://Autoloads/MusicManager.gd" type="Script" id=2]
[ext_resource path="res://Sounds/BGM/Candadito_Nvl3.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/BGM/Candado_Nvl1 .ogg" type="AudioStream" id=4]

[node name="MusicManager" type="Node"]
script = ExtResource( 2 )

[node name="Nivel_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Nivel_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Nivel_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
